force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__Department__c.field-meta.xml
<CustomField>
    <fullName>OCE__Department__c</fullName>
    <description>Department</description>
    <inlineHelpText>Department</inlineHelpText>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Medicine</fullName>
            </value>
            <value>
                <fullName>Gastroenterological Medicine</fullName>
            </value>
            <value>
                <fullName>Cardiovascular Internal Medicine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>