force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__Direction__c.field-meta.xml
<CustomField>
    <fullName>OCE__Direction__c</fullName>
    <description>Direction of Affiliation</description>
    <inlineHelpText>Direction of affiliation</inlineHelpText>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCE__AffiliationDirection</valueSetName>
    </valueSet>
</CustomField>