force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__DoNotCall__c.field-meta.xml
<CustomField>
    <fullName>OCE__DoNotCall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do Not Call</description>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>