force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__DoNotFax__c.field-meta.xml
<CustomField>
    <fullName>OCE__DoNotFax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do Not Fax</description>
    <label>Do Not Fax</label>
    <type>Checkbox</type>
</CustomField>