force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__DoNotMail__c.field-meta.xml
<CustomField>
    <fullName>OCE__DoNotMail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do Not Mail</description>
    <label>Do Not Mail</label>
    <type>Checkbox</type>
</CustomField>