force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__DoNotVisit__c.field-meta.xml
<CustomField>
    <fullName>OCE__DoNotVisit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do Not Visit</description>
    <label>Do Not Visit</label>
    <type>Checkbox</type>
</CustomField>