force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__EndDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__EndDate__c</fullName>
    <description>End Date (is used for soft delete)</description>
    <inlineHelpText>End Date (is used for soft delete)</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>