force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__From__c.field-meta.xml
<CustomField>
    <fullName>OCE__From__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>From Account</description>
    <inlineHelpText>From Account</inlineHelpText>
    <label>From</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>From Affiliations</relationshipLabel>
    <relationshipName>FromAffiliations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>