force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__FromIsPersonAccount__c.field-meta.xml
<CustomField>
    <fullName>OCE__FromIsPersonAccount__c</fullName>
    <description>Determines person account type</description>
    <formula>OCE__From__r.IsPersonAccount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FromIsPersonAccount</label>
    <type>Checkbox</type>
</CustomField>