force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__FromName__c.field-meta.xml
<CustomField>
    <fullName>OCE__FromName__c</fullName>
    <description>Returns Account full name depending on it&apos;s type</description>
    <formula>OCE__From__r.OCE__AccountFullName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Name</label>
    <type>Text</type>
</CustomField>