force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__FromTo__c.field-meta.xml
<CustomField>
    <fullName>OCE__FromTo__c</fullName>
    <description>Key based on from and to ids, e.g. to help dealing with uniqueness.</description>
    <formula>OCE__From__c + &apos;_&apos; + OCE__To__c</formula>
    <inlineHelpText>Key based on from and to ids, e.g. to help dealing with uniqueness.</inlineHelpText>
    <label>From To</label>
    <type>Text</type>
</CustomField>