force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__FromType__c.field-meta.xml
<CustomField>
    <fullName>OCE__FromType__c</fullName>
    <description>Account type value</description>
    <formula>OCE__From__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FromType</label>
    <type>Text</type>
</CustomField>