force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__Influence__c.field-meta.xml
<CustomField>
    <fullName>OCE__Influence__c</fullName>
    <description>Influence based on direction.</description>
    <formula>CASE (
    LOWER(TEXT(OCE__Direction__c)),
    &apos;neutral&apos;, $Label.OCE__NoInfluence,
    &apos;bi-directional&apos;, $Label.OCE__Influences,
    &apos;uni-directional&apos;, IF(OCE__IsReciprocal__c, $Label.OCE__InfluencedBy, $Label.OCE__Influences),
    &apos;&apos;
)</formula>
    <inlineHelpText>Influence based on direction.</inlineHelpText>
    <label>Influence</label>
    <type>Text</type>
</CustomField>