force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__IsActive__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsActive__c</fullName>
    <description>Indicator whether Affiliation is active, i.e. not ended yet.</description>
    <formula>(

    /* open end date */
    ISBLANK(OCE__EndDate__c)

    ||

    /* future end date */
    OCE__EndDate__c &gt; TODAY()

)</formula>
    <inlineHelpText>Indicator whether affiliation is active, i.e. not ended yet.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>