force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__IsAuthorizedSigner__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsAuthorizedSigner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In the context of a person account-business account relationship, indicates if the individual is an authorized signer for the organization</description>
    <label>Authorized Signer?</label>
    <type>Checkbox</type>
</CustomField>