force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__IsAutoGenerated__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsAutoGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>identifier whether Affiliation has been generated automatically or created manually.</description>
    <inlineHelpText>identifier whether affiliation has been generated automatically or created manually.</inlineHelpText>
    <label>Is Auto Generated</label>
    <type>Checkbox</type>
</CustomField>