force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__IsEnded__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsEnded__c</fullName>
    <description>Indicator whether Affiliation is expired or not.</description>
    <formula>NOT(OCE__IsActive__c)</formula>
    <inlineHelpText>Indicator whether affiliation is expired or not.</inlineHelpText>
    <label>Is Ended</label>
    <type>Checkbox</type>
</CustomField>