force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__IsOriginal__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsOriginal__c</fullName>
    <description>Indicator of original Affiliation (as opposite to reciprocal one).</description>
    <formula>/* original Affiliation in original-reciprocal pair, i.e. related instance is populated but auto-generated mark is not set */
(
    NOT(
        ISBLANK(OCE__RelatedInstance__c)
    )
    &amp;&amp;
    NOT(
        OCE__IsAutoGenerated__c
    )
)

||

/* to treat Affiliations which do not have reciprocals at all (according to business) as original - makes querying easier */
ISBLANK(OCE__RelatedInstance__c)</formula>
    <inlineHelpText>Indicator of original affiliation (as opposite to reciprocal one).</inlineHelpText>
    <label>Is Original</label>
    <type>Checkbox</type>
</CustomField>