force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only one Affiliation can be primary</description>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>