force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__IsPrivacyLaw__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsPrivacyLaw__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Privacy Law</description>
    <label>Is Privacy Law</label>
    <type>Checkbox</type>
</CustomField>