force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__IsReciprocal__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsReciprocal__c</fullName>
    <description>Indicator of reciprocal Affiliation.</description>
    <formula>NOT(
    ISBLANK(OCE__RelatedInstance__c)
)
&amp;&amp;
OCE__IsAutoGenerated__c</formula>
    <inlineHelpText>Indicator of reciprocal affiliation.</inlineHelpText>
    <label>Is Reciprocal</label>
    <type>Checkbox</type>
</CustomField>