force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__JobTitle__c.field-meta.xml
<CustomField>
    <fullName>OCE__JobTitle__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>Job Title for the Affiliation.</description>
    <inlineHelpText>Job Title for the Affiliation.</inlineHelpText>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medical Doctors</fullName>
            </value>
            <value>
                <fullName>Doctors of Osteopathy</fullName>
            </value>
            <value>
                <fullName>Dentists</fullName>
            </value>
            <value>
                <fullName>Veterinarians</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Physician Assistants</fullName>
            </value>
            <value>
                <fullName>Podiatrists</fullName>
            </value>
            <value>
                <fullName>Optometrists</fullName>
            </value>
            <value>
                <fullName>Psychologist</fullName>
            </value>
            <value>
                <fullName>Audiologist</fullName>
            </value>
            <value>
                <fullName>Chiropractor</fullName>
            </value>
            <value>
                <fullName>Medical Assistant</fullName>
            </value>
            <value>
                <fullName>Social Worker</fullName>
            </value>
            <value>
                <fullName>Healthcare Administrator</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Naturopathic Doctor</fullName>
            </value>
            <value>
                <fullName>Physical Therapist</fullName>
            </value>
            <value>
                <fullName>Occupational Therapist</fullName>
            </value>
            <value>
                <fullName>Nutritionist</fullName>
            </value>
            <value>
                <fullName>Counselor</fullName>
            </value>
            <value>
                <fullName>Alternative Medicine</fullName>
            </value>
            <value>
                <fullName>Technician/Technologist</fullName>
            </value>
            <value>
                <fullName>Other Service Provider</fullName>
            </value>
            <value>
                <fullName>Unspecified Profession</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>