force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__LastQualityCheckDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__LastQualityCheckDate__c</fullName>
    <description>Last Quality Check Date</description>
    <inlineHelpText>Last Quality Check Date</inlineHelpText>
    <label>Last Quality Check Date</label>
    <type>Date</type>
</CustomField>