force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__LastStatusUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__LastStatusUpdatedDate__c</fullName>
    <description>Last Status Updated Date</description>
    <inlineHelpText>Last Status Updated Date</inlineHelpText>
    <label>Last Status Updated Date</label>
    <type>Date</type>
</CustomField>