force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__LastUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__LastUpdatedDate__c</fullName>
    <description>Last Updated Date</description>
    <inlineHelpText>Last Updated Date</inlineHelpText>
    <label>Last Updated Date</label>
    <type>Date</type>
</CustomField>