force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__Product__c.field-meta.xml
<CustomField>
    <fullName>OCE__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Detail Product that is linked to Affiliation</description>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OCE__Product__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Detail</value>
        </filterItems>
        <filterItems>
            <field>OCE__Product__c.OCE__IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OCE__Product__c</referenceTo>
    <relationshipLabel>Affiliations</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>