force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__ReasonForUpdate__c.field-meta.xml
<CustomField>
    <fullName>OCE__ReasonForUpdate__c</fullName>
    <description>Reason For Update</description>
    <inlineHelpText>Reason For Update</inlineHelpText>
    <label>Reason For Update</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Reactivation</fullName>
            </value>
            <value>
                <fullName>No longer working</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Quality control</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Moved to another country</fullName>
            </value>
            <value>
                <fullName>Simple modification</fullName>
            </value>
            <value>
                <fullName>Data Privacy Law</fullName>
            </value>
            <value>
                <fullName>Relation suppression</fullName>
            </value>
            <value>
                <fullName>Relation creation</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Duplicate Reversal</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Creation</fullName>
            </value>
            <value>
                <fullName>Invalidation</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Relation : Creation / Suppression / Checking</fullName>
            </value>
            <value>
                <fullName>Initial Loading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>