force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__RelatedInstance__c.field-meta.xml
<CustomField>
    <fullName>OCE__RelatedInstance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Affiliation, i.e. reciprocal for original or vice versa.</description>
    <inlineHelpText>Related affiliation, i.e. reciprocal for original or vice versa.</inlineHelpText>
    <label>Related Instance</label>
    <referenceTo>OCE__Affiliation__c</referenceTo>
    <relationshipLabel>Affiliations (Related Instance)</relationshipLabel>
    <relationshipName>RelatedInstances</relationshipName>
    <type>Lookup</type>
</CustomField>