force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__Roles__c.field-meta.xml
<CustomField>
    <fullName>OCE__Roles__c</fullName>
    <description>Affiliation role</description>
    <inlineHelpText>Affiliation role</inlineHelpText>
    <label>Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admitting</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Attending</fullName>
            </value>
            <value>
                <fullName>Co Business</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Corporate Owner</fullName>
            </value>
            <value>
                <fullName>Co-Worker</fullName>
            </value>
            <value>
                <fullName>Fellowship</fullName>
            </value>
            <value>
                <fullName>GPO</fullName>
            </value>
            <value>
                <fullName>IDN</fullName>
            </value>
            <value>
                <fullName>Is Affiliated To</fullName>
            </value>
            <value>
                <fullName>Key Opinion Follower</fullName>
            </value>
            <value>
                <fullName>Key Opinion Leader</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Program Director</fullName>
            </value>
            <value>
                <fullName>Program Member</fullName>
            </value>
            <value>
                <fullName>Referred By</fullName>
            </value>
            <value>
                <fullName>Referred To</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Subsidiary</fullName>
            </value>
            <value>
                <fullName>Treating</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>