force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__Specialty__c.field-meta.xml
<CustomField>
    <fullName>OCE__Specialty__c</fullName>
    <description>The Specialty for the Affiliation.</description>
    <inlineHelpText>Country of the Affiliation.</inlineHelpText>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abdominal radiology</fullName>
            </value>
            <value>
                <fullName>Abdominal surgery</fullName>
            </value>
            <value>
                <fullName>Acupuncturist</fullName>
            </value>
            <value>
                <fullName>Addiction medicine</fullName>
            </value>
            <value>
                <fullName>Addiction psychiatry</fullName>
            </value>
            <value>
                <fullName>Adolescent medicine</fullName>
            </value>
            <value>
                <fullName>Adolescent medicine - im</fullName>
            </value>
            <value>
                <fullName>Adult cardiothoracic anesthesiology</fullName>
            </value>
            <value>
                <fullName>Adult reconstructive orthopedics</fullName>
            </value>
            <value>
                <fullName>Advanced heart failure and transplant ca</fullName>
            </value>
            <value>
                <fullName>Advanced registered nurse</fullName>
            </value>
            <value>
                <fullName>Aerospace medicine</fullName>
            </value>
            <value>
                <fullName>Allergy</fullName>
            </value>
            <value>
                <fullName>Allergy/immunology, diagnostic lab i</fullName>
            </value>
            <value>
                <fullName>Allergy and immunology</fullName>
            </value>
            <value>
                <fullName>Alternate therapy</fullName>
            </value>
            <value>
                <fullName>Anatomic/clinical pathology</fullName>
            </value>
            <value>
                <fullName>Anatomic pathology</fullName>
            </value>
            <value>
                <fullName>Anesthesia assistant</fullName>
            </value>
            <value>
                <fullName>Anesthesiology</fullName>
            </value>
            <value>
                <fullName>Anesthesiology, pain management</fullName>
            </value>
            <value>
                <fullName>Audiology</fullName>
            </value>
            <value>
                <fullName>Behavioral health &amp; social services</fullName>
            </value>
            <value>
                <fullName>Bloodbanking/transfusion medicine</fullName>
            </value>
            <value>
                <fullName>Brain injury medicine-phys med &amp; rehab</fullName>
            </value>
            <value>
                <fullName>Brain injury medicine-psych &amp; neurology</fullName>
            </value>
            <value>
                <fullName>Cardiac electrophysiology</fullName>
            </value>
            <value>
                <fullName>Cardiothoracic surgery</fullName>
            </value>
            <value>
                <fullName>Cardiovascular diseases</fullName>
            </value>
            <value>
                <fullName>Cardiovascular surgery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>