force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__StartDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__StartDate__c</fullName>
    <description>Start Date</description>
    <inlineHelpText>Start Date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>