force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__State__c.field-meta.xml
<CustomField>
    <fullName>OCE__State__c</fullName>
    <description>Affiliation State</description>
    <inlineHelpText>Affiliation State</inlineHelpText>
    <label>Affiliation State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Is opening</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Maternity/Paternity Leave</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Temporarily Inactive</fullName>
            </value>
            <value>
                <fullName>Temporarily Closed</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Reduced Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>