force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__Strength__c.field-meta.xml
<CustomField>
    <fullName>OCE__Strength__c</fullName>
    <description>Affiliation Strength</description>
    <inlineHelpText>Affiliation Strength</inlineHelpText>
    <label>Strength</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCE__AffiliationStrength</valueSetName>
    </valueSet>
</CustomField>