force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__StrengthScore__c.field-meta.xml
<CustomField>
    <fullName>OCE__StrengthScore__c</fullName>
    <description>Mapping strength to numeric value for comparison purposes.</description>
    <formula>CASE(
    LOWER(TEXT(OCE__Strength__c)),
    &apos;negative&apos;,   2,    
    &apos;low&apos;,        3,
    &apos;medium&apos;,     4,
    &apos;high&apos;,       6,
    2
)</formula>
    <inlineHelpText>Mapping strength to numeric value for comparison purposes.</inlineHelpText>
    <label>Strength Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>