force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__Title__c.field-meta.xml
<CustomField>
    <fullName>OCE__Title__c</fullName>
    <description>Doc Title</description>
    <inlineHelpText>Doc Title</inlineHelpText>
    <label>Doc Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chairman</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Vice Chairman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>