force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__To__c.field-meta.xml
<CustomField>
    <fullName>OCE__To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>To Account</description>
    <inlineHelpText>To Account</inlineHelpText>
    <label>To</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <errorMessage>Account is not valid to be used as &apos;To&apos; end of the Affiliation.</errorMessage>
        <filterItems>
            <field>$Source.OCE__From__c</field>
            <operation>notEqual</operation>
            <valueField>Account.Id</valueField>
        </filterItems>
        <infoMessage>Select the account to be used as &apos;To&apos; end of the Affiliation (should be different than &apos;From&apos; one)</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>To Affiliations</relationshipLabel>
    <relationshipName>ToAffiliations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>