force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__ToIsPersonAccount__c.field-meta.xml
<CustomField>
    <fullName>OCE__ToIsPersonAccount__c</fullName>
    <description>Determines person account type</description>
    <formula>OCE__To__r.IsPersonAccount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ToIsPersonAccount</label>
    <type>Checkbox</type>
</CustomField>