force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__ToName__c.field-meta.xml
<CustomField>
    <fullName>OCE__ToName__c</fullName>
    <description>Returns Account full name depending on it&apos;s type</description>
    <formula>OCE__To__r.OCE__AccountFullName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Name</label>
    <type>Text</type>
</CustomField>