force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__ToType__c.field-meta.xml
<CustomField>
    <fullName>OCE__ToType__c</fullName>
    <description>Account type value</description>
    <formula>OCE__To__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ToType</label>
    <type>Text</type>
</CustomField>