force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__WorkingStatus__c.field-meta.xml
<CustomField>
    <fullName>OCE__WorkingStatus__c</fullName>
    <description>Working Status</description>
    <inlineHelpText>Working Status</inlineHelpText>
    <label>Working Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Out Consultation</fullName>
            </value>
            <value>
                <fullName>Regular Substitute</fullName>
            </value>
            <value>
                <fullName>Market Access</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Career Soldier</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Provisional Substitute</fullName>
            </value>
            <value>
                <fullName>Military Hospital Intern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>