force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__WorkplaceAccountAddress__c.field-meta.xml
<CustomField>
    <fullName>OCE__WorkplaceAccountAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The shadow AccountAddress created due to workplace address dependency when this Affiliation is created.</description>
    <inlineHelpText>The shadow AccountAddress created due to workplace address dependency when this affiliation is created.</inlineHelpText>
    <label>Workplace Account Address</label>
    <referenceTo>OCE__AccountAddress__c</referenceTo>
    <relationshipLabel>Affiliations</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>