force-app/main/default/objects/OCE__Affiliation__c/recordTypes/Influence_Network.recordType-meta.xml
<RecordType>
    <fullName>Influence_Network</fullName>
    <active>true</active>
    <label>Influence Network</label>
</RecordType>