force-app/main/default/objects/OCE__Affiliation__c/recordTypes/Referral_Network.recordType-meta.xml
<RecordType>
    <fullName>Referral_Network</fullName>
    <active>true</active>
    <label>Referral Network</label>
</RecordType>