force-app/main/default/objects/OCE__Affiliation__c/recordTypes/Workplace.recordType-meta.xml
<RecordType>
    <fullName>Workplace</fullName>
    <active>true</active>
    <label>Workplace</label>
</RecordType>