force-app/main/default/objects/OCE__Affiliation__c/validationRules/OCE__Changing_SomeFields_NotAllowed.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__Changing_SomeFields_NotAllowed</fullName>
    <active>true</active>
    <description>Changing From/To is not allowed after creation.</description>
    <errorConditionFormula>(
    /* edit */
    NOT(ISNEW()) 
    &amp;&amp; 
    ( 
        ISCHANGED(OCE__From__c)
        ||
        ISCHANGED(OCE__To__c)
    )
)</errorConditionFormula>
    <errorMessage>Changing From/To is not allowed after creation.</errorMessage>
</ValidationRule>